; ModuleID = '/home/carl/AnghaBench/libgit2/tests/odb/extr_foreach.c_test_odb_foreach__files_in_objects_dir.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/odb/extr_foreach.c_test_odb_foreach__files_in_objects_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@.str = private unnamed_addr constant [13 x i8] c"testrepo.git\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"%s/objects/somefile\00", align 1
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@foreach_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_odb_foreach__files_in_objects_dir() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_5__, align 4
  %4 = alloca i32, align 4
  %5 = bitcast %struct.TYPE_5__* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %5, i8* align 4 bitcast (%struct.TYPE_5__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  store i32 0, i32* %4, align 4
  %6 = call i32 @cl_fixture_sandbox(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 @git_repository_open(i32** %1, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @git_repository_path(i32* %9)
  %11 = call i32 @git_buf_printf(%struct.TYPE_5__* %3, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i32 %10)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @cl_git_mkfile(i32 %14, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0))
  %16 = call i32 @git_buf_dispose(%struct.TYPE_5__* %3)
  %17 = load i32*, i32** %1, align 8
  %18 = call i32 @git_repository_odb(i32** %2, i32* %17)
  %19 = call i32 @cl_git_pass(i32 %18)
  %20 = load i32*, i32** %2, align 8
  %21 = load i32, i32* @foreach_cb, align 4
  %22 = call i32 @git_odb_foreach(i32* %20, i32 %21, i32* %4)
  %23 = call i32 @cl_git_pass(i32 %22)
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @cl_assert_equal_i(i32 1700, i32 %24)
  %26 = load i32*, i32** %2, align 8
  %27 = call i32 @git_odb_free(i32* %26)
  %28 = load i32*, i32** %1, align 8
  %29 = call i32 @git_repository_free(i32* %28)
  %30 = call i32 @cl_fixture_cleanup(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_fixture_sandbox(i8*) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_repository_open(i32**, i8*) #2

declare dso_local i32 @git_buf_printf(%struct.TYPE_5__*, i8*, i32) #2

declare dso_local i32 @git_repository_path(i32*) #2

declare dso_local i32 @cl_git_mkfile(i32, i8*) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_5__*) #2

declare dso_local i32 @git_repository_odb(i32**, i32*) #2

declare dso_local i32 @git_odb_foreach(i32*, i32, i32*) #2

declare dso_local i32 @cl_assert_equal_i(i32, i32) #2

declare dso_local i32 @git_odb_free(i32*) #2

declare dso_local i32 @git_repository_free(i32*) #2

declare dso_local i32 @cl_fixture_cleanup(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
